# zoomcamp-project

./: .gitignore  .sample.env  Makefile  README.md  main.tf  pyproject.toml  variables.tf  wallapop_prices_flow-deployment.yaml
dbt_transformation_runner/: main.py
google_big_query_prices_uploader/: main.py
google_storage_prices_uploader/: main.py
prefect_pipeline/: main.py
prices_uploader/: main.py
settings/: settings.py
wallapop_scrapper/: main.py
zoomcamp_project_dbt/: dbt_project.yml
zoomcamp_project_dbt/models/: avg_prices_by_keyword_and_date.sh  prices_basic_stats.sql
