[tool.poetry]
name = "zoomcamp-project"
version = "0.1.0"
description = ""
authors = ["mf-andres <amunoz@gradiant.org>"]
readme = "README.md"
packages = [{include = "zoomcamp_project"}]

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.28.2"
beautifulsoup4 = "^4.12.0"
pandas = "^1.5.3"
typer = "^0.7.0"
pyarrow = "^11.0.0"
fastparquet = "^2023.2.0"
selenium = "^4.8.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
